--- a/Templates/foodapp/addfood.html
+++ b/Templates/foodapp/addfood.html
@@ -21,6 +21,23 @@
 
     <title>Mingos | AddFood</title>
 	<link rel="shortcut icon" href="{% static 'images/favico.png' %}" type="image/x-icon">
+
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+  <script>
+
+      function add()
+      {
+        Swal.fire(
+            'Done!',
+            'Added Food to the Menu',
+            'success'
+           )
+         // swal("Successfully added   to cart", "success");     
+     
+      }
+  </script>
   </head>
     <nav class="navbar navbar-expand-lg navbar-light" style="position: fixed;width:100%;background-image: linear-gradient(180deg,#FFF,#FFF);box-shadow: 0px 0px 7px 0px #404040;">
       <a class="navbar-brand" href="/"><h2 style="color:black;font-family:sans-serif;font-weight:bolder;"><b>Mingos</b></h2></a>
@@ -88,7 +105,7 @@
             <span class="entry-box">Food Price : <input type="tel" name="FoodPrice" maxlength="6"  placeholder="&quot;in Rs&quot;" required></span>
             <span class="entry-box">Food image : <input type="file" class="valid" name="FoodImage" style="padding-left:0px" required/></span>
             <center><br/><button type="reset"class="butn" style="background-image: linear-gradient(190deg, rgba(183,28,28 ,1), rgba(239,154,154 ,1));" name="button">Cancel</button>
-            &nbsp;&nbsp;<button type="submit"class="butn"  name="button">Add</button>
+            &nbsp;&nbsp;<button type="submit"class="butn" onclick="add()"  name="button">Add</button>
               </center>
             </form>
           </div>
