--- a/Templates/foodapp/admin_wallet.html
+++ b/Templates/foodapp/admin_wallet.html
@@ -15,11 +15,11 @@
             <h1>Current Balance</h1>
         </div>
         <div class="column2-title2">
-        <h1><span>Rs. {{ adm_wallet.balance }}</span></h1>
+        <h1><span>Rs. {{ }}</span></h1>
                     </div>
         <hr>
     </div>
-          </div>
+</div>
 </body>
 <!-- <body> 
 {% block content %}
