--- a/Templates/foodapp/index.html
+++ b/Templates/foodapp/index.html
@@ -114,11 +114,11 @@
       /* banner section end */</style>
 	<link rel="icon" href="{% static 'images/favicon.ico' %}">
         <!-- bootstrap css -->
-        <link rel="stylesheet" type="text/css" href="{ % static 'css/bootstrap.min.css'%}">
+        <!-- <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css'%}"> -->
         <!-- style css -->
-        <link rel="stylesheet" type="text/css" href="{ % static 'css/styless.css'%}">
+        <link rel="stylesheet" type="text/css" href="{% static 'css/styless.css'%}">
         <!-- Responsive-->
-        <link rel="stylesheet" type="text/css" href="{ % static 'css/responsiveness.css'%}">
+        <link rel="stylesheet" type="text/css" href="{% static 'css/responsiveness.css'%}">
         <!-- fevicon -->
         <link rel="icon" href="{%static 'images/fevicon.png'%}" type="image/gif" />
         <!-- Scrollbar Custom CSS -->
@@ -171,7 +171,14 @@
           {% endif %}
           {% if request.session.CustId is not None and request.session.AdminId is None %}
           <li class="nav-item active">
-            <a class="nav-link" id="nav-link" href="/wallet">User Wallet<span class="sr-only">(current)</span></a>
+            <a class="nav-link" id="nav-link" href="/wallet"><i class="fas fa-wallet"></i> User Wallet         
+               <span class="sr-only">(current)</span></a>
+          </li>
+          {% endif %}
+          {% if request.session.CustId is None and request.session.AdminId is not None %}
+          <li class="nav-item active">
+            <a class="nav-link" id="nav-link" href="stats">Stats 
+               <span class="sr-only">(current)</span></a>
           </li>
           {% endif %}
           {% if request.session.CustId is not None or request.session.AdminId is not None %}
@@ -207,13 +214,16 @@
                <div class="carousel-item active">
                   <div class="row">
                      <div class="col-md-6">
-                        <div class="container">
-                           <h1 class="banner_taital style"></h1>
-                           <p class="banner_text"></p>
-                        </div>
+                        <!-- <div class="container"> -->
+                           <!-- <div class="banner_img"><img src="{% static 'images/a.jpeg' %}" style=    "width: 50%;
+                              text-align: center;"></div> -->
+                         </div>
+                           <!-- <h1 class="banner_taital style"></h1>
+                           <p class="banner_text"></p> -->
+                        <!-- </div> -->
                      </div>
                      <div class="col-md-6">
-                        <div class="banner_img"><img src="{% static 'images/b.png' %}" style=    "width: 50%;
+                        <div class="banner_img"><img src="{% static 'images/b.jpeg' %}" style=    "width: 50%;
                           text-align: center;"></div>
                      </div>
                   </div>
@@ -227,7 +237,7 @@
                         </div>
                      </div>
                      <div class="col-md-6">
-                        <div class="banner_img"><img src="{% static 'images/a.png' %}" style=    "width: 50%;
+                        <div class="banner_img"><img src="{% static 'images/a.jpeg' %}" style=    "width: 50%;
                           text-align: center;"></div>
                      </div>
                   </div>
