--- a/Templates/foodapp/updatefood.html
+++ b/Templates/foodapp/updatefood.html
@@ -12,7 +12,22 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
+<script>
+
+    function upd()
+    {
+      Swal.fire(
+          'Done!',
+          'Updated Food to the Menu',
+          'success'
+         )
+       // swal("Successfully added   to cart", "success");     
+   
+    }
+</script>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
@@ -86,7 +101,7 @@
             <span class="entry-box">Food Price : <input type="tel" name="FoodPrice" maxlength="6"  value="{{f.FoodPrice}}" required></span>
             <span class="entry-box">Food image : <input type="file" class="valid" name="FoodImage" style="padding-left:0px" required/></span>
             <center><br/><button type="reset"class="butn" style="margin-top:10px;background-image: linear-gradient(190deg, rgba(183,28,28 ,1), rgba(239,154,154 ,1));" name="button">Cancel</button>
-            &nbsp;&nbsp;<button type="submit"class="butn" style="margin-top:10px;"  name="button">Update</button>
+            &nbsp;&nbsp;<button type="submit"class="butn" style="margin-top:10px;"   onclick="upd()" name="button">Update</button>
               </center>
             </form>
           </div>
@@ -94,6 +109,7 @@
       </main>
       <div class="footer">
         <div id="button"></div>
+        
       <div id="container">
       <div id="cont">
       <div class="footer_center">
