--- a/Templates/foodapp/wallet.html
+++ b/Templates/foodapp/wallet.html
@@ -2,6 +2,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" href="{% static 'images/favicon.ico' %}">
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,10 +23,12 @@
                     <div class="label">Total balance</div>
                     <div class="value">Rs. {{ wallet.balance }}</div>
                 </div>
-                <div class="btn-group" style="margin-left: 105px;position: relative;bottom: 25px;margin-top: 20px;">
+                <div class="btn-group" style="margin-left:300px;position: relative;bottom: 25px;margin-top: 20px;">
                     <a href = "/add_funds"><button type="button" class="btn me-5 btn-warning">Add Money</button></a>
-                    <a href = "/subtract_funds"><button type="button" class="btn me-4 btn-warning" style="position: relative;left: 205px;">Pay</button></a>
+                    <!-- <a href = "/subtract_funds"><button type="button" class="btn me-4 btn-warning" style="position: relative;left: 205px;">Pay</button></a> -->
                 </div>
+                <div class="label">Payment History</div>
+
                 <div class="list" style="position: relative;bottom: 30px;margin-top: 20px;">
                     {% for item in trans %}
                     <div class="item">
