--- a/foodapp/static/css/logstyle.css
+++ b/foodapp/static/css/logstyle.css
@@ -2,7 +2,9 @@ body{
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background: url("/static/images/bgbg.jpeg") no-repeat;
+  /* background-image: url("https://images.app.goo.gl/vXxZvK58fGwRs4Tg9") no-repeat; */
+  /* background-image: url("../images/LOGIN.jpg") no-repeat; */
+background-color: black;
   background-size: cover;
 }
 .login-box{
