--- a/Templates/foodapp/cartlist.html
+++ b/Templates/foodapp/cartlist.html
@@ -173,7 +173,7 @@
     <div class="column2">
       <div class="large">
           <div class="column2-title">
-              <h1>Current Balance</h1>
+              <h1>Cart Price</h1>
           </div>
           <div class="column2-title2">
           <h1><span>Rs. {{ total_amt }}</span></h1>
