--- a/Templates/foodapp/foodlist.html
+++ b/Templates/foodapp/foodlist.html
@@ -419,7 +419,7 @@
         <ul class="filters_menu">
           <li data-filter="Sandwich">Sandwich</li>
           <li data-filter="rolls">Rolls</li>
-          <!-- <li data-filter=" class=".all">All</li> -->
+          <li data-filter="">All</li>
           <li data-filter="pasta">Pasta</li>
           <li data-filter="south thali">South thali</li>
           <li data-filter="north thali">North thali</li>
