--- a/Templates/foodapp/foodlist.html
+++ b/Templates/foodapp/foodlist.html
@@ -89,6 +89,9 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
+  <!-- ----------YOUTUBE CSS FO MIXITUP------ -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter- bootstrap/4.4.1/css/bootstrap.min.css">
+  <!-- ------- -->
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
       integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
@@ -154,35 +157,13 @@
         $('.filters_menu li').click(function () {
           $('.filters_menu li').removeClass('active');
           $(this).addClass('active');
-
-          var data = $(this).attr('data-filter');
-          $grid.isotope({
-            filter: data
-          })
-        });
-
-        var $grid = $(".grid").isotope({
-          itemSelector: ".all",
-          percentPosition: false,
-          masonry: {
-            columnWidth: ".all",
-          }
         })
       });
+
     </script>
           <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-          <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/mixitup/3.3.1/mixitup.min.js" integrity="sha512-nKZDK+ztK6Ug+2B6DZx+QtgeyAmo9YThZob8O3xgjqhw2IVQdAITFasl/jqbyDwclMkLXFOZRiytnUrXk/PM6A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>     -->
-<!--      
-          <script>
-            var mixer = mixitup('..filters_menu li', {
-              selectors: {
-                target: '.filters_menu li active'
-              },
-              animation: {
-                duration: 300
-              }
-            });
-          </script> -->
+     
+
      <script>
       function filterObjects(c)
       {
@@ -252,6 +233,13 @@
           'Added to cart Successfully!',
           'success'
          )
+        // for (var i = 0; i < names.length; i++)
+        // {
+        //   if(quant_inp.value != "")
+        //   {
+        //     btn_add.setAttribute("href", "/addtocart/{{f.FoodId}}/{{f.FoodQuant}}");
+        //   }
+        // }
        // swal("Successfully added   to cart", "success");     
       }
      
@@ -292,7 +280,7 @@
             >
           </li>
           {% if request.session.CustId is None and request.session.AdminId is not None %}
-          <li class="nav-item active">
+          <li class="nav-item activee">
             <a class="nav-link" id="nav-link" href="addfoods"
               >Add Food <span class="sr-only">(current)</span></a
             >
@@ -327,50 +315,24 @@
             <a class="nav-link" id="nav-link" href="/wallet"><i class="fas fa-wallet"></i> User Wallet         
                <span class="sr-only">(current)</span></a>
           </li>
-          {% endif %} {% if request.session.CustId is not None or request.session.AdminId is not None %}
+          {% endif %}
+          {% if request.session.CustId is not None or request.session.AdminId is not None %}
           <li class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              id="navbarDropdown"
-              role="button"
-              data-toggle="dropdown"
-              aria-haspopup="true"
-              aria-expanded="false"
-            >
-              <i
-                class="far fa-user-circle"
-                style="font-size: 20px; color: black"
-              ></i
-              >&nbsp;My Account
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <i class="far fa-user-circle" style="font-size:20px;color:black;"></i>&nbsp;My Account
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              {% if request.session.CustId is not None and request.session.AdminId is None %}
+			{% if request.session.CustId is not None and request.session.AdminId is None %}
               <a class="dropdown-item" href="getcustomer">Edit Profile</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="orders"
-                ><i class="fas fa-clipboard-list" style="font-size: 20px"></i
-                >&nbsp;&nbsp;&nbsp;Orders</a
-              >
-              <a class="dropdown-item" href="orders"
-                ><i class="fas fa-history" style="font-size: 20px"></i
-                >&nbsp;&nbsp;Order History</a
-              >
-              <div class="dropdown-divider"></div>
-              {% endif %}
-              <a
-                class="dropdown-item"
-                style="background: red; width: 1; border-radius: 4px"
-                href="logout"
-                ><i
-                  class="fas fa-sign-out-alt"
-                  style="font-size: 20px; color: white"
-                ></i
-                >&nbsp;&nbsp;<font color="white">Logout</font></a
-              >
+            <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="orders"><i class="fas fa-clipboard-list" style="font-size:20px;"></i>&nbsp;&nbsp;&nbsp;Orders</a>
+              <a class="dropdown-item" href="orders"><i class="fas fa-history" style="font-size:20px;"></i>&nbsp;&nbsp;Order History</a>
+            <div class="dropdown-divider"></div>
+			  {% endif %}
+              <a class="dropdown-item" style="background:red;width:1;border-radius:4px;" href="logout"><i class="fas fa-sign-out-alt" style="font-size:20px;color:white;"></i>&nbsp;&nbsp;<font color="white">Logout</font></a>
             </div>
           </li>
-
+      
           {% endif %}
         </ul>
       </div>
@@ -417,21 +379,21 @@
         </div>
 
         <ul class="filters_menu">
-          <li data-filter="Sandwich">Sandwich</li>
-          <li data-filter="rolls">Rolls</li>
-          <li data-filter="">All</li>
-          <li data-filter="pasta">Pasta</li>
-          <li data-filter="south thali">South thali</li>
-          <li data-filter="north thali">North thali</li>
-          <li data-filter="chinese">Chinese</li>
-          <li data-filter="north indian">North Indian</li>
-          <li data-filter="extra">Extras</li>
-          <li data-filter="beverages">Beverages</li>
-          <li data-filter="dosa">Dosa</li>
-          <li data-filter="south indian">South indian</li>
-          <li data-filter="quick bites">Quick bites</li>
-          <li data-filter="Chaats">Chats</li>
-          <li data-filter="Ice Cream">Ice creams</li>
+          <li class="mixitup-control-active active" data-filter="*">All</li>
+          <li data-filter=".Sandwich">Sandwich</li>
+          <li data-filter=".rolls">Rolls</li>
+          <li data-filter=".pasta">Pasta</li>
+          <li data-filter=".south thali">South thali</li>
+          <li data-filter=".north thali">North thali</li>
+          <li data-filter=".chinese">Chinese</li>
+          <li data-filter=".north indian">North Indian</li>
+          <li data-filter=".extra">Extras</li>
+          <li data-filter=".beverages">Beverages</li>
+          <li data-filter=".dosa">Dosa</li>
+          <li data-filter=".south indian">South indian</li>
+          <li data-filter=".quick bites">Quick bites</li>
+          <li data-filter=".Chaats">Chats</li>
+          <li data-filter=".Ice cream">Ice creams</li>
         </ul>
       </section>
 
@@ -439,11 +401,9 @@
         <div class="container">
           <div class="filters-content">
             <div class="row grid">
-              {% for a in filters_menu %}
-              <a onclick = "filterObjects('{{a}}')"/>
-              {% endfor %}
+              <div id="foodlist" data-names="{{ foodlist }}"></div>
               {% for f in foodlist %}
-              <div class="col-sm-6 col-lg-4  " data-category = "{{f.FoodCat}}" >
+              <div class="col-sm-6 col-lg-4 mix {{f.FoodCat}}" >
                 <div class="box">
                   <div>
                     <div class="img-box">
@@ -465,12 +425,11 @@
                         
                           <a href="/addtocart/{{f.FoodId}}"
                             >
-                            <button id="b3" onclick="cartconfirm()">Add to Cart</button>
-                           </a
-                          > 
-                        
-                        
-
+                            <button id="b3" onclick="cartconfirm()" style="width: 90px; height: 60px; border-radius: 1000%; background: #ffbe33
+                            ; display:flex; -webkit-box-pack: center;    justify-content: center;
+    -webkit-box-align: center; align-items: center;">Add to Cart</button>
+    </a>
+                           
                         {% endif %} 
                         {% if request.session.CustId is None and request.session.AdminId is not None %}
                         <p>
@@ -526,6 +485,14 @@
        </div>
        </div>
        </div>
-
+  <!-- -----MIXITUP-------------- -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/mixitup/3.3.1/mixitup.min.js"></script>
+  <script>
+    $(document).ready(function(){
+    var mixer = mixitup('.grid');
+    console.log("in mixitup")
+    });
+    </script>
   </body>
 </html>
