--- a/Templates/foodapp/orderlist.html
+++ b/Templates/foodapp/orderlist.html
@@ -85,8 +85,9 @@
         <span style="color:black;float:left;margin-left:10px;"><span style="font-size:14px;">Order ID: <b style="letter-spacing: 3px;color: grey;">{{o.OrderId}}</b></span><br /><b style="font-size:20px;"><i>{{o.OrderDate}}</i></b><br/>
 <br />
 <tr>
-<td><b>Bill:  </b></td><td>{{o.TotalBill}}</td><br /><td><b>Total:  </b></td><td id="tlp" style="color:black;"></td>
-</tr><a href="#">Invoice</a>
+<td><b>Bill:  </b></td><td>{{o.TotalBill}}</td><br />
+<!-- <td><b>Total:  </b></td><td id="tlp" style="color:black;"></td> -->
+<!-- </tr><a href="#">Invoice</a> -->
       </span>
       </div>
       {% endfor %}
