--- a/Templates/foodapp/addfood.html
+++ b/Templates/foodapp/addfood.html
@@ -38,6 +38,12 @@
      
       }
   </script>
+      <style>
+        body {
+          background-image: url("{% static '/images/LOGIN.jpg' %}") !important; 
+          background-repeat: no-repeat;
+        }
+      </style>
   </head>
     <nav class="navbar navbar-expand-lg navbar-light" style="position: fixed;width:100%;background-image: linear-gradient(180deg,#FFF,#FFF);box-shadow: 0px 0px 7px 0px #404040;">
       <a class="navbar-brand" href="/"><h2 style="color:black;font-family:sans-serif;font-weight:bolder;"><b>Mingos</b></h2></a>
