--- a/Templates/foodapp/dashboard.html
+++ b/Templates/foodapp/dashboard.html
@@ -37,6 +37,12 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
 
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+  <style>
+    body {
+      background-image: url("{% static '/images/LOGIN.jpg' %}") !important; 
+      background-repeat: no-repeat;
+    }
+  </style>
 </head>
   <nav class="navbar navbar-expand-lg navbar-light" style="position: fixed;width:100%;background-image: linear-gradient(180deg,#FFF,#FFF);box-shadow: 0px 0px 7px 0px #404040;">
     <link rel="icon" href="../" />
@@ -49,7 +55,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav" style="margin-left:auto!important;margin-right:30px;">
         <li class="nav-item active">
-          <a class="nav-link" id="nav-link" href="home">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" id="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
         </li>
         {% if request.session.CustId is None and request.session.AdminId is not None %}
         <li class="nav-item active">
@@ -104,7 +110,7 @@
             <a class="dropdown-item" href="orders"><i class="fas fa-history" style="font-size:20px;"></i>&nbsp;&nbsp;Order History</a>
           <div class="dropdown-divider"></div>
       {% endif %}
-            <a class="dropdown-item" style="background:red;width:1;border-radius:4px;" href="logout"><i class="fas fa-sign-out-alt" style="font-size:20px;color:white;"></i>&nbsp;&nbsp;<font color="white">Logout</font></a>
+            <a class="dropdown-item" style="background:red;width:1;border-radius:4px;" href="/logout"><i class="fas fa-sign-out-alt" style="font-size:20px;color:white;"></i>&nbsp;&nbsp;<font color="white">Logout</font></a>
           </div>
         </li>
         
