--- a/Templates/foodapp/login.html
+++ b/Templates/foodapp/login.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="{% static 'css/logstyle.css' %}">
     <style>
       body {
-        background-image: url("{% static 'images/background.jpg' %}") !important; 
+        background-image: url("{% static '/images/LOGIN.jpg' %}") !important; 
         background-repeat: no-repeat;
       }
     </style>
