--- a/Templates/foodapp/addfunds.html
+++ b/Templates/foodapp/addfunds.html
@@ -13,6 +13,22 @@
     <link rel="stylesheet" href="{% static 'dist/css/adminlte.min.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <title>Add Funds</title>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+  <script>
+      function addf()
+      {
+
+        Swal.fire(
+            'Sucessfully Added Money to Wallet',
+            'Now you can enjoy your food without any delay😋',
+            'success'
+           )    
+      // sleep(2000);
+      }
+
+  </script>
 </head>
 <body>
 {% block content %}
@@ -34,7 +50,7 @@
                         </div>
                       </div>
                       <div class="card-footer">
-                        <center><input type="submit" value = "Add funds" class = "btn btn-primary"></center>
+                        <center><input type="submit" onclick="addf()" value = "Add funds" class = "btn btn-primary"></center>
                       </div>
                     </form>
             </div>
