--- a/Templates/foodapp/foodlist.html
+++ b/Templates/foodapp/foodlist.html
@@ -392,7 +392,7 @@
           <li data-filter=".dosa">Dosa</li>
           <li data-filter=".south indian">South indian</li>
           <li data-filter=".quick bites">Quick bites</li>
-          <li data-filter=".Chaats">Chats</li>
+          <li data-filter=".Chaats">Chaats</li>
           <li data-filter=".Ice cream">Ice creams</li>
         </ul>
       </section>
