--- a/Templates/foodapp/foodlist.html
+++ b/Templates/foodapp/foodlist.html
@@ -416,34 +416,31 @@
                         <h6>Rs. {{f.FoodPrice}}</h6>
                         <br />
                         {% if request.session.CustId is not none %}
-                        <b style="font-size:20px;"><i>{{c.FoodName}}</i></b><br/><b>Quantity :</b>
-                
-                    <input type="number" name="FoodQuant" class="qnt" value={{f.FoodQuant}} name="FoodQuant" id="foodqnt" min="1" max="20" style="text-align:center;"/>
+                        <b style="font-size:20px;"><i>{{c.FoodName}}</i></b><br/>
+                        <b>Quantity :</b>
+                        <input type="number" name="FoodQuant" class="qnt" value={{f.FoodQuant}} name="FoodQuant" id="foodqnt" min="1" max="20" style="text-align:center;"/>
                     
                     <input type="hidden" id="ctid" value="{{c.CartId}}" readonly />
                         
-                        
+                 
                           <a href="/addtocart/{{f.FoodId}}"
                             >
-                            <button id="b3" onclick="cartconfirm()" style="width: 90px; height: 60px; border-radius: 1000%; background: #ffbe33
-                            ; display:flex; -webkit-box-pack: center;    justify-content: center;
-    -webkit-box-align: center; align-items: center;">Add to Cart</button>
-    </a>
+                            <p onclick="cartconfirm()"><i class="fas fa-cart-plus"style='font-size:140%; color:#183153' alt="Add to cart"></i></p></a>
                            
                         {% endif %} 
                         {% if request.session.CustId is None and request.session.AdminId is not None %}
                         <p>
                           <a href="/getfood/{{f.FoodId}}"
-                            ><button>Update</button></a
+                            ><i class="fas fa-edit"style='font-size:140%; color:#183153' alt="Update/Edit"></i></a
                           >
                         </p>
                         <p>
                           <a href="/deletefood/{{f.FoodId}}"
-                            ><button>Delete</button></a
+                            ><i class='fas fa-trash-alt' style='font-size:140%;color:red'></i></a
                           >
                         </p>
                         {% endif %}
-                        <a href=""> </a>
+                        
                       </div>
                     </div>
                   </div>
